[GStreamer] Flaky web process deadlock when running imported/w3c/web-platform-tests/webrtc-stats/hardware-capability-stats.https.html https://bugs.webkit.org/show_bug.cgi?id=303919

Reviewed by Xabier Rodriguez-Calvar.

Move code accessing the webrtcbin properties out of the main loop call handler in order to reduce
chances of deadlock when doing the synchronous IPC call to gather socket addresses from the ICE
agent.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::onIceCandidate):

Canonical link: https://commits.webkit.org/304290@main